Finished 3rd array

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <div class="magazines-container">
 
             </div>
+<h2>Star Wars</h2>
+            <div class="star-wars-container">
+                
+            </div>
 
 
         </section>
