--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <div class="star-wars-container">
                 
             </div>
+<h2>Harry Potter Books</h2>
+            <div class="harry-potter-container">
+                
+            </div>
 
 
         </section>
