--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="main-section">
            
             <h2>
-              Welcome  To My Fuctions
+              Welcome  To My Lists
             </h2>
 <h2>Chess Pieces</h2>
             <div class="chesspieces">
